--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>CreepyServer官网</title>
+    <meta charset="utf-8">
+    <link rel="shortcut icon" type="image/x-icon" href="res/img/icon.png" media="screen">
+    <title>CreepyServer官网</title>
 </head>
 <body>
     <h1></h1>
