--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <title>CreepyServer官网</title>
 </head>
 <body>
+    <h1>简介</h1>
+    <p>CreepyServer是CreepyCreeper的生存服务器，在这里你可以自由地收集资源、建造建筑、和怪物战斗、并探索世界来生存和发展。</p>
 </body>
 </html>
