--- a/index.html
+++ b/index.html
@@ -1,12 +1,341 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <link rel="shortcut icon" type="image/x-icon" href="res/img/icon.png" media="screen">
-    <title>CreepyServer官网</title>
-</head>
-<body>
-    <h1>简介</h1>
-    <p>CreepyServer是CreepyCreeper的生存服务器，在这里你可以自由地收集资源、建造建筑、和怪物战斗、并探索世界来生存和发展。</p>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>CreepyServer官网</title>
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui=1">
+        <meta charset="UTF-8">
+        <meta name="description" content="We create Games! Makers of Neuronball and Starblast">
+        <link rel="shortcut icon" type="image/x-icon" href="res/img/icon.png" media="screen">
+        <link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="https://www.googletagmanager.com/gtag/js?id=G-6D5QM2S7XD&amp;l=dataLayer&amp;cx=c"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <style>
+            * {
+                margin:0;
+                padding:0;
+                box-sizing:border-box;
+                -webkit-box-sizing:border-box;
+                -moz-box-sizing:border-box;
+                -webkit-font-smoothing:antialiased;
+                -moz-font-smoothing:antialiased;
+                -o-font-smoothing:antialiased;
+                font-smoothing:antialiased;
+                text-rendering:optimizeLegibility;
+            }
+            body {
+                overflow:hidden;
+                height:100%;
+                font-family: Play;
+            }
+            .header {
+                background:url(static/img/planet-light-energy-blue.jpg) no-repeat center center fixed;
+                background-size: cover;
+            }
+            .header .centerer {
+                background: -moz-linear-gradient(top,  rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
+                background: -webkit-linear-gradient(top,  rgba(0,0,0,1) 0%,rgba(0,0,0,0) 100%);
+                background: linear-gradient(to bottom,  rgba(0,0,0,1) 0%,rgba(0,0,0,0) 100%);
+                filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#00000000',GradientType=0 );
+                width:30vw;
+                min-width:300px;
+                margin:auto;
+                height:60vh;
+                text-align: center;
+                color:#FFF;
+                font-size:4vh;
+                text-shadow:0 0 5px #000,0 0 5px #000;
+            }
+            .header .centerer .logo {
+                margin:20vh 0 5vh 0;
+                width:90%;
+            }
+            .more {
+                display: inline-block;
+                border-radius: 10%;
+                margin-top:40vh;
+                font-size:2vh;
+                cursor:pointer;
+                padding-top: 1vh;
+                background:rgba(0,0,0,.1);
+                width:12vw;
+                min-width:200px;
+            }
+            .contactbtn {
+                position: absolute;
+                bottom:3vh;
+                left:0;
+                right:0;
+                margin:auto;
+            }
+            .more:hover {
+                background:rgba(0,0,0,.3);
+            }
+            .more i {
+                font-size:6vh;
+                color:#41C0F0;
+            }
+            .games {
+                background:#ddd;
+            }
+            .contact {
+                background:#aaa;
+            }
+            .top {
+                display: none;
+                text-align: center;
+                position: fixed;
+                right:3vh;
+                bottom:3vh;
+                font-size:45px;
+                background: rgba(0,0,0,.2);
+                width:70px;
+                line-height:70px;
+                height:70px;
+                color:#41C0F0;
+                border-radius: 10px;
+                cursor: pointer;
+                z-index: 100;
+            }
+            .top:hover {
+                background: rgba(0,0,0,.5);
+            }
+            .wrapper {
+                position: relative;
+                padding:2vh;
+                height:100%;
+                width:60vw;
+                min-width: 400px;
+                margin:auto;
+                text-align: center;
+                background:rgba(240,240,255,.2);
+            }
+            .wrapper p {
+                font-size:2vh;
+            }
+            .thumbnails img {
+                margin: 10% 2%;
+                max-height:25vh;
+                max-width:45%;
+                border:.5vw solid rgba(0,0,40,.1);
+                border-radius:10px;
+            }
+            .thumbnails img:hover {
+                border-color: rgba(0,0,40,.6);
+            }
+
+            .contact-container {
+                width:30vw;
+                min-width:300px;
+                margin:0 auto;
+                position:relative;
+            }
+
+            #contact {
+                background:#F9F9F9;
+                padding:25px;
+            }
+
+            #contact h3 {
+                color: #F96;
+                display: block;
+                font-size: 30px;
+                font-weight: 400;
+            }
+
+            #contact h4 {
+                margin:5px 0 15px;
+                display:block;
+                font-size:13px;
+            }
+
+            fieldset {
+                border: medium none !important;
+                margin: 0 0 10px;
+                min-width: 100%;
+                padding: 0;
+                width: 100%;
+            }
+
+            #contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea {
+                width:100%;
+                border:1px solid #CCC;
+                background:#FFF;
+                margin:0 0 5px;
+                padding:10px;
+            }
+
+            #contact input[type="text"]:hover, #contact input[type="email"]:hover, #contact input[type="tel"]:hover, #contact input[type="url"]:hover, #contact textarea:hover {
+                -webkit-transition:border-color 0.3s ease-in-out;
+                -moz-transition:border-color 0.3s ease-in-out;
+                transition:border-color 0.3s ease-in-out;
+                border:1px solid #AAA;
+            }
+
+            #contact textarea {
+                height:100px;
+                max-width:100%;
+              resize:none;
+            }
+
+            #contact button[type="submit"] {
+                cursor:pointer;
+                width:100%;
+                border:none;
+                background:#41C0F0;
+                color:#FFF;
+                margin:0 0 5px;
+                padding:10px;
+                font-size:15px;
+            }
+
+            #contact button[type="submit"]:hover {
+                background:#09C;
+                -webkit-transition:background 0.3s ease-in-out;
+                -moz-transition:background 0.3s ease-in-out;
+                transition:background-color 0.3s ease-in-out;
+            }
+
+            #contact button[type="submit"]:active { box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); }
+
+            #contact input:focus, #contact textarea:focus {
+                outline:0;
+                border:1px solid #999;
+            }
+            ::-webkit-input-placeholder {
+             color:#888;
+            }
+            :-moz-placeholder {
+             color:#888;
+            }
+            ::-moz-placeholder {
+             color:#888;
+            }
+            :-ms-input-placeholder {
+             color:#888;
+            }
+            #returndata {
+                text-align: center;
+                background: #ccc;
+                padding: 20px;
+            }
+        </style>
+    </head>
+    <body>
+        <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-49553618-6"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments)};
+          gtag('js', new Date());
+
+          gtag('config', 'UA-49553618-6');
+        </script>
+
+        <span class="top" style="display: inline;"><i class="fa fa-fw fa-angle-up"></i></span>
+        <div class="header" style="height: 1009px;">
+            <div class="centerer">
+                <img class="logo" src="static/img/neuronality-logo-white.svg">
+                <div>We create games</div>
+                <span class="more" data-scrolldown="">
+                    More about us<br>
+                    <i class="fa fa-angle-down"></i>
+                </span>
+            </div>
+        </div>
+        <div class="games" style="height: 1009px;">
+            <div class="wrapper">
+                <p class="text-center">Our games</p>
+                <div class="thumbnails">
+                    <a href="http://www.neuronball.com/" target="_blank"><img src="static/img/neuronball.jpg"></a>
+                    <a href="starblast.html"><img src="static/img/starblast.jpg"></a>
+                </div>
+                <span class="more contactbtn" data-scrolldown="">
+                    Contact us<br>
+                    <i class="fa fa-angle-down"></i>
+                </span>
+            </div>
+        </div>
+        <div class="contact" style="height: 1009px; padding-top: 251.5px;">
+            <div class="contact-container">  
+              <form id="contact" method="post" action="">
+                <h3>Quick Contact</h3>
+                <h4>Contact us today, and get reply within 24 hours!</h4>
+                <fieldset><input name="name" placeholder="Your name" type="text" tabindex="1" required=""></fieldset>
+                <fieldset><input name="email" placeholder="Your Email Address" type="email" tabindex="2" required=""></fieldset>
+                <fieldset><input name="phone" placeholder="Your Phone Number (optional)" type="tel" tabindex="3"></fieldset>
+                <fieldset><textarea name="message" placeholder="Type your Message Here... in english or french please :)" tabindex="5" required=""></textarea></fieldset>
+                <!-- <fieldset><label><input type="checkbox" required> I accept to be contacted by Neuronality</label></fieldset> -->
+                <fieldset><button name="submit" type="submit" id="contact-submit">Submit</button></fieldset>
+              </form>
+              <div id="returndata">&nbsp;</div>
+            </div>
+        </div>
+        <script>
+            var scrollTime = 500;
+            var scrollTimer = 0;
+            var page = (document.location.hash == "#contact") ? 2 : 0;
+            var maxPage = 2;
+            var sizes = function()
+            {
+                var h = window.innerHeight;
+                document.querySelector(".header").style.height = h+"px";
+                document.querySelector(".games").style.height = h+"px";
+                document.querySelector(".contact").style.height = h+"px";
+                $('.contact').css("padding-top", (h-$('.contact-container').outerHeight())/2) 
+            }
+            var scrollToPage = function(page) {
+                var h = window.innerHeight;
+                $('body,html').animate({ scrollTop: h*page }, scrollTime);
+                (page > 0) ? $(".top").fadeIn() : $(".top").fadeOut();
+            };
+            window.addEventListener("resize", sizes);
+            sizes();
+            scrollToPage(page);
+
+            $(".top").on("click", function(){ scrollToPage(page = 0); });
+            $("[data-scrollDown]").on("click", function(){
+                page = Math.min(maxPage, page+1);
+                scrollToPage(page);
+            });
+
+            var mhandler = function(evt){
+                if(evt.timeStamp - scrollTimer > scrollTime) {
+                    scrollTimer = evt.timeStamp;
+                    if(evt.wheelDelta < 0 || evt.detail > 0) { page = Math.min(maxPage, page+1); }
+                    else { page = Math.max(0, page-1); }
+                    scrollToPage(page);
+                }
+            };
+            document.addEventListener("mousewheel", mhandler, false);
+            document.addEventListener("DOMMouseScroll", mhandler, false);
+            document.addEventListener("keydown", function(evt)
+            {
+                if(document.activeElement.tagName == "INPUT" || document.activeElement.tagName == "TEXTAREA") return;
+                if(evt.timeStamp - scrollTimer > scrollTime)
+                {
+                    scrollTimer = evt.timeStamp;
+                    if(evt.keyCode == 38) { page = Math.max(0, page-1); }
+                    else if(evt.keyCode == 40) { page = Math.min(2, page+1); }
+                    else if(evt.keyCode == 33) { page = 0; }
+                    else if(evt.keyCode == 34) { page = maxPage; }
+                    scrollToPage(page);
+                }
+            },false);
+
+            var sending = false;
+            $("#contact").on("submit", function(evt){
+                evt.preventDefault();
+                if(sending) return;
+                sending = true;
+                $("[name=submit]").html("<i class='fa fa-spin fa-spinner'></i>");
+                $.post("contact.php", $("#contact").serialize(), function(data){
+                    sending = false;
+                    $("[name=submit]").html("Submit");
+                    $("#contact")[0].reset();
+                    $("#returndata").html(data.status);
+                });
+            });
+        </script>
+    </body>
 </html>
