--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <title>CreepyServer官网</title>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui=1">
-        <meta charset="UTF-8">
-        <meta name="description" content="We create Games! Makers of Neuronball and Starblast">
+        <meta name="description" content="CreepyServer Official">
         <link rel="shortcut icon" type="image/x-icon" href="res/img/icon.png" media="screen">
         <link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -30,7 +29,7 @@
                 font-family: Play;
             }
             .header {
-                background:url(static/img/planet-light-energy-blue.jpg) no-repeat center center fixed;
+                background:url(res/img/background.png) no-repeat center center fixed;
                 background-size: cover;
             }
             .header .centerer {
