--- a/index.html
+++ b/index.html
@@ -235,16 +235,16 @@
         <div class="header" style="height: 1009px;">
             <div class="centerer">
                 <img class="logo" src="static/img/neuronality-logo-white.svg">
-                <div>We create games</div>
+                <div>CJ5B的</div>
                 <span class="more" data-scrolldown="">
-                    More about us<br>
+                    关于<br>
                     <i class="fa fa-angle-down"></i>
                 </span>
             </div>
         </div>
         <div class="games" style="height: 1009px;">
             <div class="wrapper">
-                <p class="text-center">Our games</p>
+                <p class="text-center">Stuff</p>
                 <div class="thumbnails">
                     <a href="http://www.neuronball.com/" target="_blank"><img src="static/img/neuronball.jpg"></a>
                     <a href="starblast.html"><img src="static/img/starblast.jpg"></a>
