--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <img class="logo" src="static/img/neuronality-logo-white.svg">
                 <div>CJ5B的</div>
                 <span class="more" data-scrolldown="">
-                    关于<br>
+                    关于我们<br>
                     <i class="fa fa-angle-down"></i>
                 </span>
             </div>
@@ -246,11 +246,11 @@
             <div class="wrapper">
                 <p class="text-center">Stuff</p>
                 <div class="thumbnails">
-                    <a href="http://www.neuronball.com/" target="_blank"><img src="static/img/neuronball.jpg"></a>
+                    <a href="https://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=lJa-WiQbV9VBe20iqwi_CpPACmJvXFfJ&authKey=wx%2F3qZNWiakBVPd979n%2Ba2MIy5RjbzegiPITjnlX9AIaeWI7IIbbI9fDHP6YH%2BDC&noverify=0&group_code=839583273" target="_blank"><img src="res/img/qq.png"></a>
                     <a href="starblast.html"><img src="static/img/starblast.jpg"></a>
                 </div>
                 <span class="more contactbtn" data-scrolldown="">
-                    Contact us<br>
+                    联系我们<br>
                     <i class="fa fa-angle-down"></i>
                 </span>
             </div>
