--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <img class="logo" src="static/img/neuronality-logo-white.svg">
                 <div>CJ5B的</div>
                 <span class="more" data-scrolldown="">
-                    关于我们<br>
+                    加入我们<br>
                     <i class="fa fa-angle-down"></i>
                 </span>
             </div>
@@ -246,7 +246,6 @@
             <div class="wrapper">
                 <p class="text-center">Stuff</p>
                 <div class="thumbnails">
-                    <a href="https://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=lJa-WiQbV9VBe20iqwi_CpPACmJvXFfJ&authKey=wx%2F3qZNWiakBVPd979n%2Ba2MIy5RjbzegiPITjnlX9AIaeWI7IIbbI9fDHP6YH%2BDC&noverify=0&group_code=839583273" target="_blank"><img src="res/img/qq.png"></a>
                     <a href="starblast.html"><img src="static/img/starblast.jpg"></a>
                 </div>
                 <span class="more contactbtn" data-scrolldown="">
@@ -257,17 +256,18 @@
         </div>
         <div class="contact" style="height: 1009px; padding-top: 251.5px;">
             <div class="contact-container">  
-              <form id="contact" method="post" action="">
-                <h3>Quick Contact</h3>
-                <h4>Contact us today, and get reply within 24 hours!</h4>
-                <fieldset><input name="name" placeholder="Your name" type="text" tabindex="1" required=""></fieldset>
-                <fieldset><input name="email" placeholder="Your Email Address" type="email" tabindex="2" required=""></fieldset>
-                <fieldset><input name="phone" placeholder="Your Phone Number (optional)" type="tel" tabindex="3"></fieldset>
-                <fieldset><textarea name="message" placeholder="Type your Message Here... in english or french please :)" tabindex="5" required=""></textarea></fieldset>
-                <!-- <fieldset><label><input type="checkbox" required> I accept to be contacted by Neuronality</label></fieldset> -->
-                <fieldset><button name="submit" type="submit" id="contact-submit">Submit</button></fieldset>
-              </form>
-              <div id="returndata">&nbsp;</div>
+                <a href="https://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=lJa-WiQbV9VBe20iqwi_CpPACmJvXFfJ&authKey=wx%2F3qZNWiakBVPd979n%2Ba2MIy5RjbzegiPITjnlX9AIaeWI7IIbbI9fDHP6YH%2BDC&noverify=0&group_code=839583273" target="_blank"><img src="res/img/qq.png"></a>
+                <form id="contact" method="post" action="">
+                    <h3>Quick Contact</h3>
+                    <h4>Contact us today, and get reply within 24 hours!</h4>
+                    <fieldset><input name="name" placeholder="Your name" type="text" tabindex="1" required=""></fieldset>
+                    <fieldset><input name="email" placeholder="Your Email Address" type="email" tabindex="2" required=""></fieldset>
+                    <fieldset><input name="phone" placeholder="Your Phone Number (optional)" type="tel" tabindex="3"></fieldset>
+                    <fieldset><textarea name="message" placeholder="Type your Message Here... in english or french please :)" tabindex="5" required=""></textarea></fieldset>
+                    <!-- <fieldset><label><input type="checkbox" required> I accept to be contacted by Neuronality</label></fieldset> -->
+                    <fieldset><button name="submit" type="submit" id="contact-submit">Submit</button></fieldset>
+                </form>
+                <div id="returndata">&nbsp;</div>
             </div>
         </div>
         <script>
