--- a/index.html
+++ b/index.html
@@ -256,16 +256,19 @@
         </div>
         <div class="contact" style="height: 1009px; padding-top: 251.5px;">
             <div class="contact-container">  
-                <a href="https://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=lJa-WiQbV9VBe20iqwi_CpPACmJvXFfJ&authKey=wx%2F3qZNWiakBVPd979n%2Ba2MIy5RjbzegiPITjnlX9AIaeWI7IIbbI9fDHP6YH%2BDC&noverify=0&group_code=839583273" target="_blank"><img src="res/img/qq.png"></a>
+                <a href="https://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=lJa-WiQbV9VBe20iqwi_CpPACmJvXFfJ&authKey=wx%2F3qZNWiakBVPd979n%2Ba2MIy5RjbzegiPITjnlX9AIaeWI7IIbbI9fDHP6YH%2BDC&noverify=0&group_code=839583273" target="_blank">
+                    <img src="res/img/qq.png">
+                    <p>加入QQ群</p>
+                </a>
                 <form id="contact" method="post" action="">
-                    <h3>Quick Contact</h3>
-                    <h4>Contact us today, and get reply within 24 hours!</h4>
-                    <fieldset><input name="name" placeholder="Your name" type="text" tabindex="1" required=""></fieldset>
-                    <fieldset><input name="email" placeholder="Your Email Address" type="email" tabindex="2" required=""></fieldset>
-                    <fieldset><input name="phone" placeholder="Your Phone Number (optional)" type="tel" tabindex="3"></fieldset>
-                    <fieldset><textarea name="message" placeholder="Type your Message Here... in english or french please :)" tabindex="5" required=""></textarea></fieldset>
-                    <!-- <fieldset><label><input type="checkbox" required> I accept to be contacted by Neuronality</label></fieldset> -->
-                    <fieldset><button name="submit" type="submit" id="contact-submit">Submit</button></fieldset>
+                    <h3>发送电子邮件</h3>
+                    <h4>我们保证在48小时内给予答复。</h4>
+                    <fieldset><input name="name" placeholder="您的游戏名" type="text" tabindex="1" required=""></fieldset>
+                    <fieldset><input name="email" placeholder="您的电子邮箱地址" type="email" tabindex="2" required=""></fieldset>
+                    <fieldset><input name="phone" placeholder="您的电话号码（选填）" type="tel" tabindex="3"></fieldset>
+                    <fieldset><textarea name="message" placeholder="输入内容……" tabindex="5" required=""></textarea></fieldset>
+                    <!-- <fieldset><label><input type="checkbox" required>我愿意与CreepyServer的管理员联系</label></fieldset> -->
+                    <fieldset><button name="submit" type="submit" id="contact-submit">发送</button></fieldset>
                 </form>
                 <div id="returndata">&nbsp;</div>
             </div>
