--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         <div class="contact" style="height: 1009px; padding-top: 251.5px;">
             <div class="contact-container">  
                 <a href="https://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=lJa-WiQbV9VBe20iqwi_CpPACmJvXFfJ&authKey=wx%2F3qZNWiakBVPd979n%2Ba2MIy5RjbzegiPITjnlX9AIaeWI7IIbbI9fDHP6YH%2BDC&noverify=0&group_code=839583273" target="_blank">
-                    <img src="res/img/qq.png">
+                    <img style="height: 68px; width: 68px;" src="res/img/qq.png">
                     <p>加入QQ群</p>
                 </a>
                 <form id="contact" method="post" action="">
