--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
         <span class="top" style="display: inline;"><i class="fa fa-fw fa-angle-up"></i></span>
         <div class="header" style="height: 1009px;">
             <div class="centerer">
-                <img class="logo" src="static/img/neuronality-logo-white.svg">
-                <div>CJ5B的</div>
+                <img class="logo" src="res/img/minecraft.png">
+                <div>ᑕᖇEEᑭYSEᖇᐯEᖇ</div>
                 <span class="more" data-scrolldown="">
                     加入我们<br>
                     <i class="fa fa-angle-down"></i>
