--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 width:70px;
                 line-height:70px;
                 height:70px;
-                color:#41C0F0;
+                color:#AAD898;
                 border-radius: 10px;
                 cursor: pointer;
                 z-index: 100;
@@ -108,7 +108,7 @@
                 min-width: 400px;
                 margin:auto;
                 text-align: center;
-                background:rgba(240,240,255,.2);
+                background:rgba(240,255,240,.2);
             }
             .wrapper p {
                 font-size:2vh;
@@ -117,11 +117,11 @@
                 margin: 10% 2%;
                 max-height:25vh;
                 max-width:45%;
-                border:.5vw solid rgba(0,0,40,.1);
+                border:.5vw solid rgba(0,40,0,.1);
                 border-radius:10px;
             }
             .thumbnails img:hover {
-                border-color: rgba(0,0,40,.6);
+                border-color: rgba(0,40,0,.6);
             }
 
             .contact-container {
