--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         </div>
         <div class="games" style="height: 1009px;">
             <div class="wrapper">
-                <p class="text-center">Stuff</p>
+                <p class="text-center">服务器地址：5.tcp.vip.cpolar.cn:10053</p>
                 <div class="thumbnails">
                     <a href="starblast.html"><img src="static/img/starblast.jpg"></a>
                 </div>
