--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             }
             .more i {
                 font-size:6vh;
-                color:#41F0C0;
+                color:#41C0F0;
             }
             .games {
                 background:#ddd;
@@ -92,7 +92,7 @@
                 width:70px;
                 line-height:70px;
                 height:70px;
-                color:#99FF88;
+                color:#41C0F0;
                 border-radius: 10px;
                 cursor: pointer;
                 z-index: 100;
