--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) 100%);
                 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#00000000',GradientType=0 );
                 width:30vw;
-                min-width:300px;
+                min-width:450px;
                 margin:auto;
                 height:60vh;
                 text-align: center;
@@ -234,8 +234,9 @@
         <span class="top" style="display: inline;"><i class="fa fa-fw fa-angle-up"></i></span>
         <div class="header" style="height: 1009px;">
             <div class="centerer">
-                <img class="logo" src="res/img/minecraft.png">
+                <img class="logo" style="height: 132px; width: 822px" src="res/img/minecraft.png">
                 <div>ᑕᖇEEᑭYSEᖇᐯEᖇ</div>
+                <div>Discover · Invent · Believe · Destroy · Live</div>
                 <span class="more" data-scrolldown="">
                     加入我们<br>
                     <i class="fa fa-angle-down"></i>
