--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <span class="top" style="display: inline;"><i class="fa fa-fw fa-angle-up"></i></span>
         <div class="header" style="height: 1009px;">
             <div class="centerer">
-                <img class="logo" style="height: 132px; width: 822px" src="res/img/minecraft.png">
+                <img class="logo" src="res/img/minecraft.png">
                 <div>ᑕᖇEEᑭYSEᖇᐯEᖇ</div>
                 <div>Discover · Invent · Believe · Destroy · Live</div>
                 <span class="more" data-scrolldown="">
@@ -245,7 +245,7 @@
         </div>
         <div class="games" style="height: 1009px;">
             <div class="wrapper">
-                <p class="text-center">服务器地址：5.tcp.vip.cpolar.cn:10053</p>
+                <p class="text-center">服务器地址：5.tcp.vip.cpolar.cn:12237</p>
                 <div class="thumbnails">
                     <a href="starblast.html"><img src="static/img/starblast.jpg"></a>
                 </div>
