--- a/EaglerX/index.html
+++ b/EaglerX/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
-<!-- saved from url=(0036)https://ws.imc.re/eaglerx/index.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="IMC-EaglerX 1.8 test directory HTML page">
-<meta name="keywords" content="eaglercraft, IMC-EaglerX, minecraft, 1.8, 1.8.8">
-<title>IMC-EaglerX 1.8</title>
+<meta name="keywords" content="EaglerCraft, EaglerX, Minecraft, 1.8, 1.8.8">
+<title>EaglerX 1.8.8</title>
 <meta property="og:locale" content="en-US">
 <meta property="og:type" content="website">
-<meta property="og:title" content="IMC-EaglerX 1.8">
+<meta property="og:title" content="EaglerX 1.8.8">
 <meta property="og:description" content="IMC二开运营的中文EaglercraftX 1.8客户端">
 <link type="image/png" rel="shortcut icon" href="https://ws.imc.re/eaglerx/favicon.png">
-<script src="./IMC-EaglerX 1.8_files/f.txt"></script><script src="./IMC-EaglerX 1.8_files/f(1).txt"></script><script src="./IMC-EaglerX 1.8_files/f(2).txt" id="google_shimpl"></script><script src="./IMC-EaglerX 1.8_files/hm.js.下载"></script><script type="text/javascript" src="./IMC-EaglerX 1.8_files/classes.js.下载"></script>
-<script type="text/javascript" src="./IMC-EaglerX 1.8_files/fix-webm-duration.js.下载"></script>
+<script src="./f.txt"></script><script src="./f(1).txt"></script><script src="./f(2).txt" id="google_shimpl"></script><script src="./hm.js"></script><script type="text/javascript" src="./classes.js"></script>
+<script type="text/javascript" src="./IMC-EaglerX 1.8_files/fix-webm-duration.js"></script>
 <script type="text/javascript">
 			"use strict";
 			window.addEventListener("load", () => {
 				if(document.location.href.startsWith("file:")) {
 					alert("HTTP please, do not open this file locally, run a local HTTP server and load it via HTTP");
-				}else {
+				} else {
 					window.eaglercraftXOpts = {
 						container: "game_frame",
 						assetsURI: "assets.epk",
@@ -42,10 +40,7 @@
 				}
 			});
 		</script>
-
-<script async="" src="./IMC-EaglerX 1.8_files/f(3).txt" crossorigin="anonymous" data-checked-head="true"></script>
-
-
+<script async="" src="./f(3).txt" crossorigin="anonymous" data-checked-head="true"></script>
 <script>
   var _hmt = _hmt || [];
   (function() {
@@ -57,6 +52,5 @@
   </script>
 <meta http-equiv="origin-trial" content="A7CQXglZzTrThjGTBEn1rWTxHOEtkWivwzgea+NjyardrwlieSjVuyG44PkYgIPGs8Q9svD8sF3Yedn0BBBjXAkAAACFeyJvcmlnaW4iOiJodHRwczovL2RvdWJsZWNsaWNrLm5ldDo0NDMiLCJmZWF0dXJlIjoiUHJpdmFjeVNhbmRib3hBZHNBUElzIiwiZXhwaXJ5IjoxNjk1MTY3OTk5LCJpc1N1YmRvbWFpbiI6dHJ1ZSwiaXNUaGlyZFBhcnR5Ijp0cnVlfQ=="><meta http-equiv="origin-trial" content="A3vKT9yxRPjmXN3DpIiz58f5JykcWHjUo/W7hvmtjgh9jPpQgem9VbADiNovG8NkO6mRmk70Kex8/KUqAYWVWAEAAACLeyJvcmlnaW4iOiJodHRwczovL2dvb2dsZXN5bmRpY2F0aW9uLmNvbTo0NDMiLCJmZWF0dXJlIjoiUHJpdmFjeVNhbmRib3hBZHNBUElzIiwiZXhwaXJ5IjoxNjk1MTY3OTk5LCJpc1N1YmRvbWFpbiI6dHJ1ZSwiaXNUaGlyZFBhcnR5Ijp0cnVlfQ=="><meta http-equiv="origin-trial" content="A4A26Ymj79UVY7C7JGUS4BG1s7MdcDokAQf/RP0paks+RoTYbXHxceT/5L4iKcsleFCngi75YfNRGW2+SpVv1ggAAACLeyJvcmlnaW4iOiJodHRwczovL2dvb2dsZXRhZ3NlcnZpY2VzLmNvbTo0NDMiLCJmZWF0dXJlIjoiUHJpdmFjeVNhbmRib3hBZHNBUElzIiwiZXhwaXJ5IjoxNjk1MTY3OTk5LCJpc1N1YmRvbWFpbiI6dHJ1ZSwiaXNUaGlyZFBhcnR5Ijp0cnVlfQ=="><meta http-equiv="origin-trial" content="As0hBNJ8h++fNYlkq8cTye2qDLyom8NddByiVytXGGD0YVE+2CEuTCpqXMDxdhOMILKoaiaYifwEvCRlJ/9GcQ8AAAB8eyJvcmlnaW4iOiJodHRwczovL2RvdWJsZWNsaWNrLm5ldDo0NDMiLCJmZWF0dXJlIjoiV2ViVmlld1hSZXF1ZXN0ZWRXaXRoRGVwcmVjYXRpb24iLCJleHBpcnkiOjE3MTk1MzI3OTksImlzU3ViZG9tYWluIjp0cnVlfQ=="><meta http-equiv="origin-trial" content="AgRYsXo24ypxC89CJanC+JgEmraCCBebKl8ZmG7Tj5oJNx0cmH0NtNRZs3NB5ubhpbX/bIt7l2zJOSyO64NGmwMAAACCeyJvcmlnaW4iOiJodHRwczovL2dvb2dsZXN5bmRpY2F0aW9uLmNvbTo0NDMiLCJmZWF0dXJlIjoiV2ViVmlld1hSZXF1ZXN0ZWRXaXRoRGVwcmVjYXRpb24iLCJleHBpcnkiOjE3MTk1MzI3OTksImlzU3ViZG9tYWluIjp0cnVlfQ=="></head>
 <body style="margin:0px;width:100vw;height:100vh;overflow:hidden;" id="game_frame" aria-hidden="false">
-<script defer="" src="./IMC-EaglerX 1.8_files/v8b253dfea2ab4077af8c6f58422dfbfd1689876627854" integrity="sha512-bjgnUKX4azu3dLTVtie9u6TKqgx29RBwfj3QXYt5EKfWM/9hPSAI/4qcV5NACjwAo8UtTeWefx6Zq5PHcMm7Tg==" data-cf-beacon="{&quot;rayId&quot;:&quot;7f066ddeafef891e&quot;,&quot;version&quot;:&quot;2023.7.0&quot;,&quot;r&quot;:1,&quot;token&quot;:&quot;3c9953b0a5e54aef93d172f8a1dd2682&quot;,&quot;si&quot;:100}" crossorigin="anonymous"></script>
-
+<script defer="" src="./v8b253dfea2ab4077af8c6f58422dfbfd1689876627854" integrity="sha512-bjgnUKX4azu3dLTVtie9u6TKqgx29RBwfj3QXYt5EKfWM/9hPSAI/4qcV5NACjwAo8UtTeWefx6Zq5PHcMm7Tg==" data-cf-beacon="{&quot;rayId&quot;:&quot;7f066ddeafef891e&quot;,&quot;version&quot;:&quot;2023.7.0&quot;,&quot;r&quot;:1,&quot;token&quot;:&quot;3c9953b0a5e54aef93d172f8a1dd2682&quot;,&quot;si&quot;:100}" crossorigin="anonymous"></script>
 <ins class="adsbygoogle adsbygoogle-noablate" data-adsbygoogle-status="done" style="display: none !important;" data-ad-status="unfilled"><div id="aswift_0_host" tabindex="0" title="Advertisement" aria-label="Advertisement" style="border: none; height: 0px; width: 0px; margin: 0px; padding: 0px; position: relative; visibility: visible; background-color: transparent; display: inline-block;"><iframe id="aswift_0" name="aswift_0" style="left:0;position:absolute;top:0;border:0;width:undefinedpx;height:undefinedpx;" sandbox="allow-forms allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts allow-top-navigation-by-user-activation" frameborder="0" marginwidth="0" marginheight="0" vspace="0" hspace="0" allowtransparency="true" scrolling="no" src="./IMC-EaglerX 1.8_files/ads.html" data-google-container-id="a!1" data-load-complete="true"></iframe></div></ins><canvas width="1920" height="906" style="width: 100%; height: 100%; image-rendering: pixelated;"></canvas><iframe src="./IMC-EaglerX 1.8_files/aframe.html" width="0" height="0" style="display: none;"></iframe></body><iframe id="google_esf" name="google_esf" src="./IMC-EaglerX 1.8_files/zrt_lookup.html" style="display: none;"></iframe><ins class="adsbygoogle adsbygoogle-noablate" data-adsbygoogle-status="done" style="display: none !important; width: 100vw !important; height: 100vh !important; inset: 0px auto auto 0px !important; clear: none !important; float: none !important; margin: 0px !important; max-height: none !important; max-width: none !important; opacity: 1 !important; overflow: visible !important; padding: 0px !important; position: fixed !important; vertical-align: baseline !important; visibility: visible !important; z-index: 2147483647 !important; background: transparent !important;" aria-hidden="true" data-ad-status="filled" data-vignette-loaded="true"><div id="aswift_1_host" tabindex="0" title="Advertisement" aria-label="Advertisement" style="border: none !important; height: 100vh !important; width: 100vw !important; margin: 0px !important; padding: 0px !important; position: relative !important; visibility: visible !important; background-color: transparent !important; display: inline-block !important; inset: auto !important; clear: none !important; float: none !important; max-height: none !important; max-width: none !important; opacity: 1 !important; overflow: visible !important; vertical-align: baseline !important; z-index: auto !important;"><iframe id="aswift_1" name="aswift_1" style="width: 100vw !important; height: 100vh !important; inset: 0px auto auto 0px !important; position: absolute !important; clear: none !important; display: inline !important; float: none !important; margin: 0px !important; max-height: none !important; max-width: none !important; opacity: 1 !important; overflow: visible !important; padding: 0px !important; vertical-align: baseline !important; visibility: visible !important; z-index: auto !important;" sandbox="allow-forms allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts allow-top-navigation-by-user-activation" width="" height="" frameborder="0" marginwidth="0" marginheight="0" vspace="0" hspace="0" allowtransparency="true" scrolling="no" src="./IMC-EaglerX 1.8_files/zrt_lookup(1).html" data-google-container-id="a!2" data-google-query-id="CLnjgtmBvoADFRB_KgodwoUCZg" data-load-complete="true"></iframe></div></ins></html>
