--- a/EaglerX/index.html
+++ b/EaglerX/index.html
@@ -10,7 +10,7 @@
 <meta property="og:description" content="IMC二开运营的中文EaglercraftX 1.8客户端">
 <link type="image/png" rel="shortcut icon" href="https://ws.imc.re/eaglerx/favicon.png">
 <script src="./f.txt"></script><script src="./f(1).txt"></script><script src="./f(2).txt" id="google_shimpl"></script><script src="./hm.js"></script><script type="text/javascript" src="./classes.js"></script>
-<script type="text/javascript" src="./IMC-EaglerX 1.8_files/fix-webm-duration.js"></script>
+<script type="text/javascript" src="./fix-webm-duration.js"></script>
 <script type="text/javascript">
 			"use strict";
 			window.addEventListener("load", () => {
