--- a/src/mask.html
+++ b/src/mask.html
@@ -6,6 +6,8 @@
 		<script src="src/i18n_handler.js"></script>
 	</head>
 	<body>
+		<div id="" style="background-color:#FFD700;height:200px;width:100px;float:left;">
+		</div>
 		<noscript id="noscript">
 			This webpage requires javascript to work! Please enable javascript in your browser settings!</br>
 			这个网页需要Javascript来运作，请在浏览器设置中启用JavaScript！
